Result of Error.prototype.toString not ES5 conformant https://bugs.webkit.org/show_bug.cgi?id=70889

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* runtime/ErrorPrototype.cpp:
(JSC::errorProtoFuncToString):

LayoutTests:

* fast/js/native-error-prototype-expected.txt:
* fast/js/script-tests/native-error-prototype.js:
* fast/js/script-tests/toString-recursion.js:
* fast/js/toString-recursion-expected.txt:



Canonical link: https://commits.webkit.org/88854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100310 268f45cc-cd09-0410-ab3c-d52691b4dbfc