LayoutTests/fast/js/script-tests/toString-recursion.js
@@ -6,7 +6,7 @@ description(
 shouldBe("var array = []; array[0] = array; array + ''", "''");
 
 // Error (name, message)
-shouldBe("var error = new Error; error.name = error; error.message = error; error + ''", "': '");
+shouldBe("var error = new Error; error.name = error; error.message = error; error + ''", "''");
 
 // RegExp (source)
 shouldBe("var regexp = /a/; regexp.source = regexp; regexp + ''", "'/a/'");
